--- a/pages/home.html
+++ b/pages/home.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AGROSYSTEM - Panel principal</title>
-  <link rel="stylesheet" href="./css/home">
+  <title>AGROSYSTEM - Home</title>
+  <link rel="stylesheet" href="../css/estilos.css">
+
 </head>
 <body>
   <header class="header">
@@ -15,12 +16,10 @@
   </header>
 
 
-    <!-- SECCIÓN PRINCIPAL -->
     <div class="dashboard">
-      <!-- BARRA LATERAL IZQUIERDA -->
         <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn activo">🐄 Animal</button>
+      <button class="menu-btn ">🐄 Animal</button>
       <button class="menu-btn">💉 Medicamento</button>
       <button class="menu-btn">📋 Tarjeta de salud</button>
       <button class="menu-btn">🏥 Reporte médico</button>
@@ -28,10 +27,7 @@
       <button class="menu-btn">🛡️ Enfermedad</button>
     </aside>
 
-
-      <!-- CONTENIDO PRINCIPAL -->
       <main class="contenido">
-        <!-- Vacío de momento -->
       </main>
     </div>
   </div>
