--- a/pages/tarjeta_salud.html
+++ b/pages/tarjeta_salud.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animales - Agrosystem</title>
-  <link rel="stylesheet" href="../css/medicamento.css">
+  <title>Trajeta de salud</title>
+  <link rel="stylesheet" href="../css/tarjeta_salud.css">
 </head>
 <body>
   <header class="header">
@@ -16,9 +16,9 @@
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn activo">🐄 Animal</button>
+      <button class="menu-btn ">🐄 Animal</button>
       <button class="menu-btn">💉 Medicamento</button>
-      <button class="menu-btn">📋 Tarjeta de salud</button>
+      <button class="menu-btn activo">📋 Tarjeta de salud</button>
       <button class="menu-btn">🏥 Reporte médico</button>
       <button class="menu-btn">⚕️ Tratamiento</button>
       <button class="menu-btn">🛡️ Enfermedad</button>
@@ -94,7 +94,6 @@
 
   <button class="btn-agregar">Agregar</button>
 </div>
-
   <script src="../js/tarjeta_salud.js"></script>
 </body>
 </html>
