--- a/pages/enfermedad.html
+++ b/pages/enfermedad.html
@@ -3,13 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enfermedad</title>
+  <title>Enfermedades - Agrosystem</title>
   <link rel="stylesheet" href="../css/enfermedad.css">
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    .header { background: #4CAF50; color: white; padding: 10px; }
+    .contenedor-principal { display: flex; }
+    .sidebar { width: 200px; background: #f1f1f1; padding: 10px; }
+    .contenido { flex: 1; padding: 10px; }
+    .buscador { margin-bottom: 10px; }
+    table { width: 100%; border-collapse: collapse; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+    th { background-color: #f2f2f2; }
+    .modal { display: none; position: fixed; top: 0; left:0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; }
+    .modal-contenido { background: white; padding: 20px; width: 400px; border-radius: 5px; }
+    .botones { margin-top: 10px; display: flex; justify-content: space-between; }
+    .btn-agregar { margin-bottom: 10px; }
+    button { cursor: pointer; }
+    textarea { resize: none; }
+  </style>
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <img src="../img/logo.png" alt="Logo Agrosystem">
+      <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
     </div>
   </header>
@@ -24,9 +41,7 @@
       <button class="menu-btn activo">🛡️ Enfermedad</button>
     </aside>
 
-   <div class="tarjeta-salud-container">
-  <h2>AGREGAR ENFERMEDAD</h2>
-   <main class="contenido">
+    <main class="contenido">
       <div class="buscador-agregar">
         <div class="buscador">
           <input type="text" placeholder="Buscar">
@@ -34,49 +49,57 @@
         </div>
         <button class="btn-agregar">Agregar Enfermedad ➕</button>
       </div>
+
       <div class="tabla-animales">
+        <!-- Tabla de enfermedades se generará aquí -->
       </div>
     </main>
   </div>
 
-  <div class="form-grid">
-    <div class="form-group">
-      <label><strong>Nombre:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-     <div class="form-group">
-      <label><strong>Tipo:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Sintomas:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Duracion Estimada:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-     <div class="form-group">
-      <label><strong>Tratamientos Recomendados:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-   <div class="form-group">
-      <label><strong>Nivel Riesgo:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Modo de transmicion:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-  </div>
-  <div class="form-group">
-      <label><strong>Analisis:</strong></label>
-      <input type="text" placeholder="">
+  <!-- Modal para agregar/editar enfermedad -->
+  <div id="modalAgregarEnfermedad" class="modal">
+    <div class="modal-contenido">
+      <h2>Agregar Enfermedad</h2>
+
+      <label>Nombre:</label>
+      <input type="text" id="nombre">
+
+      <label>Tipo:</label>
+      <input type="text" id="tipo">
+
+      <label>Síntomas:</label>
+      <input type="text" id="sintomas">
+
+      <label>Duración Estimada:</label>
+      <input type="text" id="duracion">
+
+      <label>Tratamientos Recomendados:</label>
+      <input type="text" id="tratamientos">
+
+      <label>Nivel de Riesgo:</label>
+      <select id="riesgo">
+        <option value="Leve">Leve</option>
+        <option value="Moderado">Moderado</option>
+        <option value="Grave">Grave</option>
+        <option value="Crítico">Crítico</option>
+      </select>
+
+      <label>Modo de Transmisión:</label>
+      <input type="text" id="transmision">
+
+      <label>Análisis:</label>
+      <input type="text" id="analisis">
+
+      <label>Observaciones:</label>
+      <textarea id="observaciones" rows="3" style="width:100%;"></textarea>
+
+      <div class="botones">
+        <button id="btnGuardarEnfermedad">Guardar</button>
+        <button id="btnCerrarModal">Cancelar</button>
+      </div>
     </div>
   </div>
 
- 
   <script src="../js/enfermedad.js"></script>
 </body>
 </html>
-
