--- a/pages/medicamento.html
+++ b/pages/medicamento.html
@@ -3,13 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medicamento</title>
+  <title>Medicamento - Agrosystem</title>
   <link rel="stylesheet" href="../css/medicamento.css">
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    .header { background: #4CAF50; color: white; padding: 10px; }
+    .contenedor-principal { display: flex; }
+    .sidebar { width: 200px; background: #f1f1f1; padding: 10px; }
+    .contenido { flex: 1; padding: 10px; }
+    .buscador-agregar { display: flex; justify-content: space-between; margin-bottom: 10px; }
+    .buscador input { padding: 5px; }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+    th { background-color: #f2f2f2; }
+    .modal { display: none; position: fixed; top: 0; left:0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; }
+    .modal-contenido { background: white; padding: 20px; width: 400px; border-radius: 5px; }
+    .botones { margin-top: 10px; display: flex; justify-content: space-between; }
+    button { cursor: pointer; }
+  </style>
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <img src="../img/logo.png" alt="Logo Agrosystem">
+      <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
     </div>
   </header>
@@ -24,77 +40,54 @@
       <button class="menu-btn">🛡️ Enfermedad</button>
     </aside>
 
-   <div class="tarjeta-salud-container">
-  <h2>AGREGAR MEDICAMENTO</h2>
+    <main class="contenido">
+      <div class="buscador-agregar">
+        <div class="buscador">
+          <input type="text" placeholder="Buscar">
+          <button>🔍</button>
+        </div>
+        <button class="btn-agregar">Agregar Medicamento ➕</button>
+      </div>
 
-  <div class="form-grid">
-    <div class="form-group">
-      <label><strong>Nombre:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Solucion:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Dosis:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Caducidad:</strong></label>
-      <input type="text" placeholder="">
-    </div>
+      <div class="tabla-medicamentos">
+        <!-- Aquí se mostrará la tabla de medicamentos -->
+      </div>
+    </main>
+  </div>
 
-    <div class="form-group">
-      <label><strong>Via:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Composicion:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Indicaciones:</strong></label>
-      <input type="text" placeholder="">
+  <!-- Modal para agregar/editar medicamento -->
+  <div id="modalMedicamento" class="modal">
+    <div class="modal-contenido">
+      <h2>Agregar Medicamento</h2>
+
+      <label>Nombre:</label>
+      <input type="text" id="nombre">
+
+      <label>Presentación:</label>
+      <input type="text" id="presentacion">
+
+      <label>Dosis:</label>
+      <input type="text" id="dosis">
+
+      <label>Caducidad:</label>
+      <input type="text" id="caducidad">
+
+      <label>Via:</label>
+      <input type="text" id="via">
+
+      <label>Composición:</label>
+      <input type="text" id="composicion">
+
+      <label>Indicaciones:</label>
+      <input type="text" id="indicaciones">
+
+      <div class="botones">
+        <button id="btnGuardarMedicamento">Guardar</button>
+        <button id="btnCerrarModal">Cancelar</button>
+      </div>
     </div>
   </div>
 
-  <h3>Historial Médico</h3>
-  <div class="form-grid">
-    <div class="form-group">
-      <label><strong>Fecha:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Tipo de evento:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Diagnóstico:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Descripción:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-
-    <div class="form-group">
-      <label><strong>Tratamiento aplicado:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Veterinario:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Estado:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-  </div>
-
-  <button class="btn-agregar">Agregar</button>
-</div>
   <script src="../js/medicamento.js"></script>
 </body>
 </html>
-
