--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -3,20 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trajeta de salud</title>
+  <title>Tarjeta de Salud - Agrosystem</title>
   <link rel="stylesheet" href="../css/tarjeta_salud.css">
+  <style>
+    /* Básico para funcionar */
+    body { font-family: Arial, sans-serif; margin:0; padding:0; }
+    .header { background:#4CAF50; color:white; padding:10px; }
+    .contenedor-principal { display:flex; }
+    .sidebar { width:200px; background:#f1f1f1; padding:10px; }
+    .contenido { flex:1; padding:10px; }
+    .buscador { margin-bottom:10px; display:flex; gap:5px; }
+    table { width:100%; border-collapse:collapse; margin-top:10px; }
+    th, td { border:1px solid #ddd; padding:8px; text-align:left; }
+    th { background:#f2f2f2; }
+    button { cursor:pointer; }
+    .botones { margin-top:10px; display:flex; justify-content:space-between; }
+    .modal {
+      display:none;
+      position:fixed; top:0; left:0;
+      width:100%; height:100%;
+      background:rgba(0,0,0,0.5);
+      justify-content:center; align-items:center;
+    }
+    .modal-contenido {
+      background:white; padding:20px;
+      border-radius:5px; width:400px;
+      max-height:90%; overflow-y:auto;
+    }
+  </style>
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <img src="../img/logo.png" alt="Logo Agrosystem">
+      <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
     </div>
   </header>
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn ">🐄 Animal</button>
+      <button class="menu-btn">🐄 Animal</button>
       <button class="menu-btn">💉 Medicamento</button>
       <button class="menu-btn activo">📋 Tarjeta de salud</button>
       <button class="menu-btn">🏥 Reporte médico</button>
@@ -24,77 +50,89 @@
       <button class="menu-btn">🛡️ Enfermedad</button>
     </aside>
 
-   <div class="tarjeta-salud-container">
-  <h2>AGREGAR TARJETA DE SALUD</h2>
+    <main class="contenido">
+      <div class="buscador-agregar">
+        <div class="buscador">
+          <input type="text" placeholder="Buscar animal o arete...">
+          <button>🔍</button>
+        </div>
+        <button class="btn-agregar">Agregar Animal ➕</button>
+      </div>
 
-  <div class="form-grid">
-    <div class="form-group">
-      <label><strong>Nombre:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Num. Arete:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Sexo:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Peso actual:</strong></label>
-      <input type="text" placeholder="">
-    </div>
+      <div class="tabla-tarjetas"></div>
+    </main>
+  </div>
 
-    <div class="form-group">
-      <label><strong>Fecha de nacimiento:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Rebaño:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Características:</strong></label>
-      <input type="text" placeholder="">
+  <!-- Modal Visualizar -->
+  <div id="modalVisualizar" class="modal">
+    <div class="modal-contenido" style="width:450px;">
+      <h2>Detalle del Animal</h2>
+      <div id="contenidoVisualizar"></div>
+      <div class="botones">
+        <button id="btnCerrarVisualizar">Cerrar</button>
+      </div>
     </div>
   </div>
 
-  <h3>Historial Médico</h3>
-  <div class="form-grid">
-    <div class="form-group">
-      <label><strong>Fecha:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Tipo de evento:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Diagnóstico:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Descripción:</strong></label>
-      <input type="text" placeholder="">
-    </div>
+  <!-- Modal Agregar/Editar -->
+  <div id="modalAgregar" class="modal">
+    <div class="modal-contenido">
+      <h2 id="tituloModal">Agregar Animal</h2>
 
-    <div class="form-group">
-      <label><strong>Tratamiento aplicado:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Veterinario:</strong></label>
-      <input type="text" placeholder="">
-    </div>
-    <div class="form-group">
-      <label><strong>Estado:</strong></label>
-      <input type="text" placeholder="">
+      <label>Nombre:</label>
+      <input type="text" id="nombre">
+
+      <label>Número de Arete:</label>
+      <input type="text" id="numArete">
+
+      <label>Sexo:</label>
+      <select id="sexo">
+        <option value="H">Hembra</option>
+        <option value="M">Macho</option>
+      </select>
+
+      <label>Peso actual:</label>
+      <input type="text" id="peso">
+
+      <label>Fecha de nacimiento:</label>
+      <input type="date" id="fechaNac">
+
+      <label>Rebaño:</label>
+      <input type="text" id="rebano">
+
+      <label>Características:</label>
+      <input type="text" id="caract">
+
+      <h3>Historial Médico</h3>
+
+      <label>Fecha:</label>
+      <input type="date" id="hFecha">
+
+      <label>Tipo de evento:</label>
+      <input type="text" id="hEvento">
+
+      <label>Diagnóstico:</label>
+      <input type="text" id="hDiag">
+
+      <label>Descripción:</label>
+      <input type="text" id="hDesc">
+
+      <label>Tratamiento aplicado:</label>
+      <input type="text" id="hTrat">
+
+      <label>Veterinario:</label>
+      <input type="text" id="hVet">
+
+      <label>Estado:</label>
+      <input type="text" id="hEstado">
+
+      <div class="botones">
+        <button id="btnGuardar">Guardar</button>
+        <button id="btnCerrarModal">Cancelar</button>
+      </div>
     </div>
   </div>
 
-  <button class="btn-agregar">Agregar</button>
-</div>
   <script src="../js/tarjeta_salud.js"></script>
 </body>
 </html>
-
