--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -50,6 +50,7 @@
     </div>
   </div>
 
-  <script src="../js/home.js"></script>
+   <script src="../js/home.js"></script>
+    <script src="../js/navegacion.js"></script>
 </body>
 </html>
