--- a/src/pages/reporte_medico.html
+++ b/src/pages/reporte_medico.html
@@ -113,6 +113,7 @@
     </div>
   </div>
 
-  <script src="../js/reporte_medico.js"></script>
+  <script src="../js/reportemedico.js"></script>
+    <script src="../js/navegacion.js"></script>
 </body>
 </html>
