--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -133,6 +133,7 @@
     </div>
   </div>
 
-  <script src="../js/tarjeta_salud.js"></script>
+  <script src="../js/tarjetasalud.js"></script>
+    <script src="../js/navegacion.js"></script>
 </body>
 </html>
