--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -107,7 +107,7 @@
     </div>
   </div>
 
-  <!-- Script al final del body -->
-  <script src="../js/animales.js"></script>
+  <script src="../js/animal.js"></script>
+  <script src="../js/navegacion.js"></script>
 </body>
 </html>
