--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -31,15 +31,16 @@
     </div>
   </header>
 
-  <div class="contenedor-principal">
-    <aside class="sidebar">
-      <button class="menu-btn activo">🐄 Animal</button>
-      <button class="menu-btn">💉 Medicamento</button>
-      <button class="menu-btn">📋 Tarjeta de salud</button>
-      <button class="menu-btn">🏥 Reporte médico</button>
-      <button class="menu-btn">⚕️ Tratamiento</button>
-      <button class="menu-btn">🛡️ Enfermedad</button>
-    </aside>
+  <div class="dashboard">
+    <div class="contenedor-principal">
+      <aside class="sidebar">
+        <button class="menu-btn"><i class="fas fa-cow"></i> Animal</button>
+        <button class="menu-btn"><i class="fas fa-pills"></i> Medicamento</button>
+        <button class="menu-btn"><i class="fas fa-file-alt"></i> Tarjeta de salud</button>
+        <button class="menu-btn"><i class="fas fa-notes-medical"></i> Reporte médico</button>
+        <button class="menu-btn"><i class="fas fa-syringe"></i> Tratamiento</button>
+        <button class="menu-btn"><i class="fas fa-shield-virus"></i> Enfermedad</button>
+      </aside>
 
     <main class="contenido">
       <div class="buscador-agregar">
