--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -33,12 +33,12 @@
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn ">🐄 Animal</button>
-      <button class="menu-btn">💉 Medicamento</button>
-      <button class="menu-btn">📋 Tarjeta de salud</button>
-      <button class="menu-btn">🏥 Reporte médico</button>
-      <button class="menu-btn">⚕️ Tratamiento</button>
-      <button class="menu-btn activo">🛡️ Enfermedad</button>
+      <button class="menu-btn "> Animal</button>
+      <button class="menu-btn"> Medicamento</button>
+      <button class="menu-btn"> Tarjeta de salud</button>
+      <button class="menu-btn"> Reporte médico</button>
+      <button class="menu-btn"> Tratamiento</button>
+      <button class="menu-btn activo"> Enfermedad</button>
     </aside>
 
     <main class="contenido">
