--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -6,7 +6,6 @@
   <title>Tarjeta de Salud - Agrosystem</title>
   <link rel="stylesheet" href="../css/tarjeta_salud.css">
   <style>
-    /* Básico para funcionar */
     body { font-family: Arial, sans-serif; margin:0; padding:0; }
     .header { background:#4CAF50; color:white; padding:10px; }
     .contenedor-principal { display:flex; }
@@ -42,12 +41,12 @@
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn">🐄 Animal</button>
-      <button class="menu-btn">💉 Medicamento</button>
-      <button class="menu-btn activo">📋 Tarjeta de salud</button>
-      <button class="menu-btn">🏥 Reporte médico</button>
-      <button class="menu-btn">⚕️ Tratamiento</button>
-      <button class="menu-btn">🛡️ Enfermedad</button>
+      <button class="menu-btn"> Animal</button>
+      <button class="menu-btn"> Medicamento</button>
+      <button class="menu-btn activo"> Tarjeta de salud</button>
+      <button class="menu-btn"> Reporte médico</button>
+      <button class="menu-btn"> Tratamiento</button>
+      <button class="menu-btn"> Enfermedad</button>
     </aside>
 
     <main class="contenido">
@@ -63,7 +62,6 @@
     </main>
   </div>
 
-  <!-- Modal Visualizar -->
   <div id="modalVisualizar" class="modal">
     <div class="modal-contenido" style="width:450px;">
       <h2>Detalle del Animal</h2>
@@ -74,7 +72,6 @@
     </div>
   </div>
 
-  <!-- Modal Agregar/Editar -->
   <div id="modalAgregar" class="modal">
     <div class="modal-contenido">
       <h2 id="tituloModal">Agregar Animal</h2>
