--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -6,7 +6,6 @@
   <title>Animales - Agrosystem</title>
   <link rel="stylesheet" href="../css/animales.css">
   <style>
-    /* Estilos básicos para que se vea funcional */
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
     .header { background: #4CAF50; color: white; padding: 10px; }
     .contenedor-principal { display: flex; }
@@ -31,16 +30,15 @@
     </div>
   </header>
 
-  <div class="dashboard">
-    <div class="contenedor-principal">
-      <aside class="sidebar">
-        <button class="menu-btn"><i class="fas fa-cow"></i> Animal</button>
-        <button class="menu-btn"><i class="fas fa-pills"></i> Medicamento</button>
-        <button class="menu-btn"><i class="fas fa-file-alt"></i> Tarjeta de salud</button>
-        <button class="menu-btn"><i class="fas fa-notes-medical"></i> Reporte médico</button>
-        <button class="menu-btn"><i class="fas fa-syringe"></i> Tratamiento</button>
-        <button class="menu-btn"><i class="fas fa-shield-virus"></i> Enfermedad</button>
-      </aside>
+  <div class="contenedor-principal">
+    <aside class="sidebar">
+      <button class="menu-btn activo"> Animal</button>
+      <button class="menu-btn"> Medicamento</button>
+      <button class="menu-btn"> Tarjeta de salud</button>
+      <button class="menu-btn"> Reporte médico</button>
+      <button class="menu-btn"> Tratamiento</button>
+      <button class="menu-btn"> Enfermedad</button>
+    </aside>
 
     <main class="contenido">
       <div class="buscador-agregar">
@@ -52,12 +50,10 @@
       </div>
 
       <div class="tabla-animales">
-        <!-- Aquí se mostrará la tabla de animales -->
       </div>
     </main>
   </div>
 
-  <!-- Modal para visualizar animal -->
 <div id="modalVisualizarAnimal" class="modal">
   <div class="modal-contenido" style="width: 400px;">
     <h2>Detalles del Animal</h2>
@@ -69,7 +65,6 @@
 </div>
 
 
-  <!-- Modal para agregar/editar animal -->
   <div id="modalAgregarAnimal" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Animal</h2>
@@ -108,7 +103,7 @@
     </div>
   </div>
 
-  <script src="../js/animal.js"></script>
+  <script src="../js/animales.js"></script>
   <script src="../js/navegacion.js"></script>
 </body>
 </html>
