--- a/src/pages/estadisticas.html
+++ b/src/pages/estadisticas.html
@@ -16,8 +16,9 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo">
-      <img src="../img/logo.png" alt="Logo Agrosystem">
+    <div class="logo" onclick="irHome()">
+    <img src="../img/logo.png" alt="Logo" style="cursor: pointer;">
+</div>
       <span class="nombre">AGROSYSTEM</span>
     </div>
   </header>
