--- a/src/pages/medicamento.html
+++ b/src/pages/medicamento.html
@@ -32,12 +32,12 @@
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn ">🐄 Animal</button>
-      <button class="menu-btn activo">💉 Medicamento</button>
-      <button class="menu-btn">📋 Tarjeta de salud</button>
-      <button class="menu-btn">🏥 Reporte médico</button>
-      <button class="menu-btn">⚕️ Tratamiento</button>
-      <button class="menu-btn">🛡️ Enfermedad</button>
+      <button class="menu-btn "> Animal</button>
+      <button class="menu-btn activo"> Medicamento</button>
+      <button class="menu-btn"> Tarjeta de salud</button>
+      <button class="menu-btn"> Reporte médico</button>
+      <button class="menu-btn"> Tratamiento</button>
+      <button class="menu-btn"> Enfermedad</button>
     </aside>
 
     <main class="contenido">
@@ -50,12 +50,10 @@
       </div>
 
       <div class="tabla-medicamentos">
-        <!-- Aquí se mostrará la tabla de medicamentos -->
       </div>
     </main>
   </div>
 
-  <!-- Modal para agregar/editar medicamento -->
   <div id="modalMedicamento" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Medicamento</h2>
