--- a/src/pages/reporte_medico.html
+++ b/src/pages/reporte_medico.html
@@ -35,12 +35,12 @@
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn">🐄 Animal</button>
-      <button class="menu-btn">💉 Medicamento</button>
-      <button class="menu-btn">📋 Tarjeta de salud</button>
-      <button class="menu-btn activo">🏥 Reporte médico</button>
-      <button class="menu-btn">⚕️ Tratamiento</button>
-      <button class="menu-btn">🛡️ Enfermedad</button>
+      <button class="menu-btn"> Animal</button>
+      <button class="menu-btn"> Medicamento</button>
+      <button class="menu-btn"> Tarjeta de salud</button>
+      <button class="menu-btn activo"> Reporte médico</button>
+      <button class="menu-btn"> Tratamiento</button>
+      <button class="menu-btn"> Enfermedad</button>
     </aside>
 
     <main class="contenido">
@@ -53,12 +53,10 @@
       </div>
 
       <div class="tabla-animales">
-        <!-- Aquí se mostrará la tabla de reportes médicos -->
       </div>
     </main>
   </div>
 
-  <!-- Modal para visualizar reporte -->
   <div id="modalVisualizarReporte" class="modal">
     <div class="modal-contenido" style="width: 500px;">
       <h2>Detalle del Reporte Médico</h2>
@@ -69,7 +67,6 @@
     </div>
   </div>
 
-  <!-- Modal para agregar/editar reporte -->
   <div id="modalAgregarReporte" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Reporte Médico</h2>
