--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroSystem - Bienvenida</title>
-  <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
     <div class="main-wrapper">
@@ -21,16 +21,16 @@
             <div class="login-panel">
                 <h1 class="logo-title">AGROSYSTEM</h1>
                 
-                <form>
+                <form id="loginForm">
 
                     <div class="input-group">
                         <span class="icon">👤</span>
-                        <input type="text" placeholder="Ingrese su usuario" class="input-field">
+                        <input type="text" id="usuarioInput" placeholder="Ingrese su usuario" class="input-field">
                     </div>
 
                     <div class="input-group">
                         <span class="icon">🔒</span>
-                        <input type="password" placeholder="Contraseña" class="input-field">
+                        <input type="password" id="passwordInput" placeholder="Contraseña" class="input-field">
                         <span class="toggle-eye">👁️</span>
                     </div>
 
@@ -47,6 +47,6 @@
         </div>
         
     </div>
-    <script type="module" src="./src/features/main/app.js"></script>
+    <script src="./src/js/login.js"></script>
 </body>
 </html>
