--- a/src/pages/reporte_medico.html
+++ b/src/pages/reporte_medico.html
@@ -7,19 +7,52 @@
   <link rel="stylesheet" href="../css/reporte_medico.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    .header { background: #4CAF50; color: white; padding: 10px; }
+    
+    /* Header */
+    .header { 
+      background: #4CAF50; 
+      color: white; 
+      padding: 10px; 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+    }
+    .header-buttons { display: flex; gap: 10px; }
+    .btn-volver {
+      background-color: #2e7d32;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+    .btn-volver:hover { background-color: #388e3c; }
+
+    /* Layout principal */
     .contenedor-principal { display: flex; }
     .sidebar { width: 200px; background: #f1f1f1; padding: 10px; }
     .contenido { flex: 1; padding: 10px; }
-    .buscador { margin-bottom: 10px; }
+
+    /* Buscador y tabla */
+    .buscador-agregar { display: flex; justify-content: space-between; margin-bottom: 10px; }
+    .buscador input { padding: 5px; }
     table { width: 100%; border-collapse: collapse; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
     th { background-color: #f2f2f2; }
+
+    /* Modal */
     .modal { display: none; position: fixed; top: 0; left:0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; z-index: 1000; }
     .modal-contenido { background: white; padding: 20px; width: 400px; border-radius: 5px; max-height: 80vh; overflow-y: auto; }
+
+    /* Botones */
     .botones { margin-top: 10px; display: flex; justify-content: space-between; }
     .btn-agregar { margin-bottom: 10px; }
     button { cursor: pointer; }
+
+    /* Inputs y labels */
     label { display: block; margin-top: 10px; font-weight: bold; }
     input, select, textarea { width: 100%; padding: 5px; margin-top: 3px; box-sizing: border-box; }
     textarea { resize: vertical; }
@@ -30,6 +63,13 @@
     <div class="logo">
       <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
+    </div>
+
+    <!-- Botón Volver al Home -->
+    <div class="header-buttons">
+      <button onclick="volverHome()" class="btn-volver">
+        <i class="fas fa-arrow-left"></i> Volver al Home
+      </button>
     </div>
   </header>
 
@@ -53,10 +93,12 @@
       </div>
 
       <div class="tabla-animales">
+        <!-- Aquí se cargará la tabla de reportes médicos -->
       </div>
     </main>
   </div>
 
+  <!-- Modal Visualizar Reporte -->
   <div id="modalVisualizarReporte" class="modal">
     <div class="modal-contenido" style="width: 500px;">
       <h2>Detalle del Reporte Médico</h2>
@@ -67,6 +109,7 @@
     </div>
   </div>
 
+  <!-- Modal Agregar Reporte -->
   <div id="modalAgregarReporte" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Reporte Médico</h2>
@@ -111,6 +154,12 @@
   </div>
 
   <script src="../js/reporte_medico.js"></script>
-    <script src="../js/navegacion.js"></script>
+  <script src="../js/navegacion.js"></script>
+  <script>
+    // Función para volver al Home
+    function volverHome() {
+      window.location.href = "../index.html"; // Ajusta la ruta según tu proyecto
+    }
+  </script>
 </body>
-</html> 
+</html>
