--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -7,22 +7,50 @@
   <link rel="stylesheet" href="../css/tarjeta_salud.css">
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; }
-    .header { background:#4CAF50; color:white; padding:10px; }
+    
+    /* Header */
+    .header { 
+      background:#4CAF50; 
+      color:white; 
+      padding:10px; 
+      display:flex; 
+      justify-content:space-between; 
+      align-items:center; 
+    }
+    .header-buttons { display:flex; gap:10px; }
+    .btn-volver {
+      background-color: #2e7d32;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+    .btn-volver:hover { background-color: #388e3c; }
+
     .contenedor-principal { display:flex; }
     .sidebar { width:200px; background:#f1f1f1; padding:10px; }
     .contenido { flex:1; padding:10px; }
+
     .buscador { margin-bottom:10px; display:flex; gap:5px; }
     table { width:100%; border-collapse:collapse; margin-top:10px; }
     th, td { border:1px solid #ddd; padding:8px; text-align:left; }
     th { background:#f2f2f2; }
     button { cursor:pointer; }
+
     .botones { margin-top:10px; display:flex; justify-content:space-between; }
+
+    /* Modal */
     .modal {
       display:none;
       position:fixed; top:0; left:0;
       width:100%; height:100%;
       background:rgba(0,0,0,0.5);
       justify-content:center; align-items:center;
+      z-index:1000;
     }
     .modal-contenido {
       background:white; padding:20px;
@@ -36,6 +64,13 @@
     <div class="logo">
       <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
+    </div>
+
+    <!-- Botón Volver al Home -->
+    <div class="header-buttons">
+      <button onclick="volverHome()" class="btn-volver">
+        <i class="fas fa-arrow-left"></i> Volver al Home
+      </button>
     </div>
   </header>
 
@@ -62,6 +97,7 @@
     </main>
   </div>
 
+  <!-- Modal Visualizar Animal -->
   <div id="modalVisualizar" class="modal">
     <div class="modal-contenido" style="width:450px;">
       <h2>Detalle del Animal</h2>
@@ -72,6 +108,7 @@
     </div>
   </div>
 
+  <!-- Modal Agregar Animal -->
   <div id="modalAgregar" class="modal">
     <div class="modal-contenido">
       <h2 id="tituloModal">Agregar Animal</h2>
@@ -131,6 +168,12 @@
   </div>
 
   <script src="../js/tarjeta_salud.js"></script>
-    <script src="../js/navegacion.js"></script>
+  <script src="../js/navegacion.js"></script>
+  <script>
+    // Función para volver al Home
+    function volverHome() {
+      window.location.href = "../index.html"; // Ajusta según tu proyecto
+    }
+  </script>
 </body>
 </html>
