--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -7,7 +7,26 @@
   <link rel="stylesheet" href="../css/animales.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    .header { background: #4CAF50; color: white; padding: 10px; }
+    .header { background: #4CAF50; color: white; padding: 10px;
+      display: flex; justify-content: space-between; align-items: center; }
+    .header-buttons { display: flex; gap: 10px; }
+
+    .btn-volver {
+      background-color: #2e7d32;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    .btn-volver:hover {
+      background-color: #388e3c;
+    }
+
     .contenedor-principal { display: flex; }
     .sidebar { width: 200px; background: #f1f1f1; padding: 10px; }
     .contenido { flex: 1; padding: 10px; }
@@ -28,6 +47,15 @@
       <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
     </div>
+
+    <!-- ⭐ BOTÓN AGREGADO AQUÍ ⭐ -->
+    <div class="header-buttons">
+      <button onclick="volverHome()" class="btn-volver">
+        <i class="fas fa-arrow-left"></i> Volver al Home
+      </button>
+    </div>
+    <!-- ⭐ FIN DEL BOTÓN ⭐ -->
+
   </header>
 
   <div class="contenedor-principal">
@@ -49,21 +77,19 @@
         <button class="btn-agregar">Agregar animal ➕</button>
       </div>
 
-      <div class="tabla-animales">
-      </div>
+      <div class="tabla-animales"></div>
     </main>
   </div>
 
-<div id="modalVisualizarAnimal" class="modal">
-  <div class="modal-contenido" style="width: 400px;">
-    <h2>Detalles del Animal</h2>
-    <div id="contenidoAnimal"></div>
-    <div class="botones">
-      <button id="btnCerrarVisualizar">Cerrar</button>
+  <div id="modalVisualizarAnimal" class="modal">
+    <div class="modal-contenido" style="width: 400px;">
+      <h2>Detalles del Animal</h2>
+      <div id="contenidoAnimal"></div>
+      <div class="botones">
+        <button id="btnCerrarVisualizar">Cerrar</button>
+      </div>
     </div>
   </div>
-</div>
-
 
   <div id="modalAgregarAnimal" class="modal">
     <div class="modal-contenido">
@@ -73,11 +99,10 @@
       <input type="text" id="nombre">
 
       <label>Sexo:</label>
-<select id="sexo">
-  <option value="H">Hembra</option>
-  <option value="M">Macho</option>
-</select>
-
+      <select id="sexo">
+        <option value="H">Hembra</option>
+        <option value="M">Macho</option>
+      </select>
 
       <label>Número de Arete:</label>
       <input type="text" id="numArete">
