--- a/src/pages/registrarse.html
+++ b/src/pages/registrarse.html
@@ -65,7 +65,7 @@
                         type="tel" 
                         id="telefono" 
                         name="telefono" 
-                        placeholder="Ingrese su num de telefono completo" 
+                        placeholder="Ingrese su num de telefono" 
                         class="input-field input-with-icon"
                         required
                     >
