--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -48,13 +48,7 @@
       <span class="nombre">AGROSYSTEM</span>
     </div>
 
-    <!-- ⭐ BOTÓN AGREGADO AQUÍ ⭐ -->
-    <div class="header-buttons">
-      <button onclick="volverHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
-      </button>
-    </div>
-    <!-- ⭐ FIN DEL BOTÓN ⭐ -->
+  <button onclick="irHome()">Volver al Home</button>
 
   </header>
 
