--- a/src/pages/estadisticas.html
+++ b/src/pages/estadisticas.html
@@ -53,13 +53,7 @@
       <span class="nombre">AGROSYSTEM</span>
     </div>
 
-    <!-- ⭐ BOTÓN AGREGADO ⭐ -->
-    <div class="header-buttons">
-      <button onclick="volverHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
-      </button>
-    </div>
-    <!-- ⭐ FIN BOTÓN ⭐ -->
+    <button onclick="irHome()">Volver al Home</button>
 
   </header>
 
