--- a/src/pages/reporte_medico.html
+++ b/src/pages/reporte_medico.html
@@ -156,10 +156,7 @@
   <script src="../js/reporte_medico.js"></script>
   <script src="../js/navegacion.js"></script>
   <script>
-    // Función para volver al Home
-    function volverHome() {
-      window.location.href = "../index.html"; // Ajusta la ruta según tu proyecto
-    }
+     <button onclick="irHome()">Volver al Home</button>
   </script>
 </body>
 </html>
