--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -170,10 +170,7 @@
   <script src="../js/tarjeta_salud.js"></script>
   <script src="../js/navegacion.js"></script>
   <script>
-    // Función para volver al Home
-    function volverHome() {
-      window.location.href = "../index.html"; // Ajusta según tu proyecto
-    }
+     <button onclick="irHome()">Volver al Home</button>
   </script>
 </body>
 </html>
