--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -61,14 +61,8 @@
       <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
       <span class="nombre">AGROSYSTEM</span>
     </div>
-
-    <!-- ⭐ BOTÓN AGREGADO ⭐ -->
-    <div class="header-buttons">
-      <button onclick="volverHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
-      </button>
-    </div>
-    <!-- ⭐ FIN BOTÓN ⭐ -->
+   
+    <button onclick="irHome()">Volver al Home</button>
 
   </header>
 
