--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -124,5 +124,8 @@
 
   <script src="../js/animales.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
+
 </body>
 </html>
