--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -137,6 +137,8 @@
 
   <script src="../js/enfermedad.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
 
 </body>
 </html>
