--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -87,6 +87,10 @@
       <button onclick="cerrarSesion()" class="btn-logout">
         <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
       </button>
+      <!-- Botón de traducción agregado -->
+      <button id="btnTraducir" class="btn-perfil">
+        <i class="fas fa-globe"></i> Español
+      </button>
     </div>
   </header>
 
@@ -118,5 +122,8 @@
 
   <script src="../js/home.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
+
 </body>
 </html>
