--- a/src/pages/medicamento.html
+++ b/src/pages/medicamento.html
@@ -111,5 +111,8 @@
 
   <script src="../js/medicamento.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
+
 </body>
 </html>
