--- a/src/pages/tratamiento.html
+++ b/src/pages/tratamiento.html
@@ -151,5 +151,8 @@
 
   <script src="../js/tratamiento.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
+
 </body>
 </html>
