--- a/src/pages/estadisticas.html
+++ b/src/pages/estadisticas.html
@@ -78,5 +78,8 @@
 
   <script src="../js/estadisticas.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
+
 </body>
 </html>
