--- a/src/pages/reporte_medico.html
+++ b/src/pages/reporte_medico.html
@@ -150,6 +150,9 @@
 
   <script src="../js/reporte_medico.js"></script>
   <script src="../js/navegacion.js"></script>
+  <script src="../js/i18n.js"></script>
+
+
   <script>
     
   </script>
