--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -164,8 +164,9 @@
 
   <script src="../js/tarjeta_salud.js"></script>
   <script src="../js/navegacion.js"></script>
-  <script>
-   
-  </script>
+  <script src="../js/i18n.js"></script>
+
+
+
 </body>
 </html>
