--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -5,61 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animales - Agrosystem</title>
   <link rel="stylesheet" href="../css/animales.css">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    .header { background: #4CAF50; color: white; padding: 10px;
-      display: flex; justify-content: space-between; align-items: center; }
-    .header-buttons { display: flex; gap: 10px; }
-
-    .btn-volver {
-      background-color: #2e7d32;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-
-    .btn-volver:hover {
-      background-color: #388e3c;
-    }
-
-    .contenedor-principal { display: flex; }
-    .sidebar { width: 200px; background: #f1f1f1; padding: 10px; }
-    .contenido { flex: 1; padding: 10px; }
-    .buscador { margin-bottom: 10px; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    .modal { display: none; position: fixed; top: 0; left:0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; }
-    .modal-contenido { background: white; padding: 20px; width: 300px; border-radius: 5px; }
-    .botones { margin-top: 10px; display: flex; justify-content: space-between; }
-    .btn-agregar { margin-bottom: 10px; }
-    button { cursor: pointer; }
-  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <img src="../img/logo.png" alt="Logo Agrosystem" style="height:40px;">
+      <img src="../img/logo.png" alt="Logo Agrosystem">
       <span class="nombre">AGROSYSTEM</span>
     </div>
-
-  <button onclick="irHome()">Volver al Home</button>
-
+    <div class="header-buttons">
+      <button onclick="irHome()" class="btn-volver">
+        <i class="fas fa-arrow-left"></i> Volver al Home
+      </button>
+    </div>
   </header>
 
   <div class="contenedor-principal">
     <aside class="sidebar">
-      <button class="menu-btn activo"> Animal</button>
-      <button class="menu-btn"> Medicamento</button>
-      <button class="menu-btn"> Tarjeta de salud</button>
-      <button class="menu-btn"> Reporte médico</button>
-      <button class="menu-btn"> Tratamiento</button>
-      <button class="menu-btn"> Enfermedad</button>
+      <button class="menu-btn activo"><i class="fas fa-cow"></i> Animal</button>
+      <button class="menu-btn"><i class="fas fa-pills"></i> Medicamento</button>
+      <button class="menu-btn"><i class="fas fa-file-alt"></i> Tarjeta de salud</button>
+      <button class="menu-btn"><i class="fas fa-notes-medical"></i> Reporte médico</button>
+      <button class="menu-btn"><i class="fas fa-syringe"></i> Tratamiento</button>
+      <button class="menu-btn"><i class="fas fa-shield-virus"></i> Enfermedad</button>
     </aside>
 
     <main class="contenido">
@@ -125,7 +93,5 @@
   <script src="../js/animales.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
-
-
 </body>
 </html>
