--- a/src/pages/tarjeta_salud.html
+++ b/src/pages/tarjeta_salud.html
@@ -36,7 +36,7 @@
           <input type="text" placeholder="Buscar animal o arete...">
           <button>🔍</button>
         </div>
-        <button class="btn-agregar">Agregar Animal ➕</button>
+        <button class="btn-agregar">Agregar Tarjeta de salud ➕</button>
       </div>
 
       <div class="tabla-tarjetas"></div>
