--- a/src/pages/estadisticas.html
+++ b/src/pages/estadisticas.html
@@ -38,7 +38,7 @@
     </div>
     <div class="header-buttons">
       <button onclick="irHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
+        <i class="fas fa-arrow-left"></i> Volver al Inicio
       </button>
     </div>
   </header>
