--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -13,11 +13,15 @@
       <img src="../img/logo.png" alt="Logo Agrosystem">
       <span class="nombre">AGROSYSTEM</span>
     </div>
+    
+    <!-- Mensaje de bienvenida centrado y más grande -->
+    <span class="usuario-bienvenida" id="bienvenidaUsuario"></span>
+    
     <div class="header-buttons">
-      <span class="usuario-bienvenida" id="bienvenidaUsuario"></span>
       <button onclick="irPerfil()" class="btn-perfil">
         <i class="fas fa-user"></i> Mi Perfil
       </button>
+      <!-- Botón de traducción -->
       <button id="btnTraducir" class="btn-perfil">
         <i class="fas fa-globe"></i> Español
       </button>
