--- a/src/pages/perfil.html
+++ b/src/pages/perfil.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header-buttons">
       <button onclick="volverHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
+        <i class="fas fa-arrow-left"></i> Volver al Inicio
       </button>
       <button onclick="cerrarSesion()" class="btn-logout">
         <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
