--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header-buttons">
       <button onclick="irHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Inicio
+        <i class="fas fa-arrow-left"></i> Volver al Home
       </button>
     </div>
   </header>
@@ -43,6 +43,7 @@
     </main>
   </div>
 
+  <!-- Modal para Agregar/Editar -->
   <div id="modalAgregarEnfermedad" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Enfermedad</h2>
@@ -82,6 +83,17 @@
       <div class="botones">
         <button id="btnGuardarEnfermedad">Guardar</button>
         <button id="btnCerrarModal">Cancelar</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal para Visualizar -->
+  <div id="modalVisualizarEnfermedad" class="modal">
+    <div class="modal-contenido">
+      <h2>Detalle de la Enfermedad</h2>
+      <div id="contenidoEnfermedad"></div>
+      <div class="botones">
+        <button id="btnCerrarVisualizar">Cerrar</button>
       </div>
     </div>
   </div>
