--- a/src/pages/estadisticas.html
+++ b/src/pages/estadisticas.html
@@ -65,5 +65,10 @@
   <script src="../js/estadisticas.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
+  <script src="../js/i18n.js"></script>
+<script>
+ 
+</script>
+
 </body>
 </html>
