--- a/src/pages/reporte_medico.html
+++ b/src/pages/reporte_medico.html
@@ -99,5 +99,10 @@
   <script src="../js/reporte_medico.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
+  <script src="../js/i18n.js"></script>
+<script>
+ 
+</script>
+
 </body>
 </html>
