--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -101,5 +101,10 @@
   <script src="../js/enfermedad.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
+  <script src="../js/i18n.js"></script>
+<script>
+ 
+</script>
+
 </body>
 </html>
