--- a/src/pages/medicamento.html
+++ b/src/pages/medicamento.html
@@ -90,5 +90,10 @@
   <script src="../js/medicamento.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
+  <script src="../js/i18n.js"></script>
+<script>
+ 
+</script>
+
 </body>
 </html>
