--- a/src/pages/tratamiento.html
+++ b/src/pages/tratamiento.html
@@ -117,5 +117,10 @@
   <script src="../js/tratamiento.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
+  <script src="../js/i18n.js"></script>
+<script>
+
+</script>
+
 </body>
 </html>
