--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header-buttons">
       <button onclick="irHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
+        <i class="fas fa-arrow-left"></i> Volver al inicio input-with-ico
       </button>
     </div>
   </header>
@@ -43,7 +43,6 @@
     </main>
   </div>
 
-  <!-- Modal para Agregar/Editar -->
   <div id="modalAgregarEnfermedad" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Enfermedad</h2>
@@ -87,21 +86,10 @@
     </div>
   </div>
 
-  <!-- Modal para Visualizar -->
-  <div id="modalVisualizarEnfermedad" class="modal">
-    <div class="modal-contenido">
-      <h2>Detalle de la Enfermedad</h2>
-      <div id="contenidoEnfermedad"></div>
-      <div class="botones">
-        <button id="btnCerrarVisualizar">Cerrar</button>
-      </div>
-    </div>
-  </div>
-
   <script src="../js/enfermedad.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
-  <script src="../js/i18n.js"></script>
+ 
 <script>
  
 </script>
