--- a/src/pages/medicamento.html
+++ b/src/pages/medicamento.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header-buttons">
       <button onclick="irHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al Home
+        <i class="fas fa-arrow-left"></i> Volver al Inicio
       </button>
     </div>
   </header>
@@ -43,7 +43,6 @@
     </main>
   </div>
 
-  <!-- Modal para Agregar/Editar -->
   <div id="modalMedicamento" class="modal">
     <div class="modal-contenido">
       <h2>Agregar Medicamento</h2>
@@ -76,21 +75,10 @@
     </div>
   </div>
 
-  <!-- Modal para Visualizar -->
-  <div id="modalVisualizarMedicamento" class="modal">
-    <div class="modal-contenido">
-      <h2>Detalle del Medicamento</h2>
-      <div id="contenidoMedicamento"></div>
-      <div class="botones">
-        <button id="btnCerrarVisualizar">Cerrar</button>
-      </div>
-    </div>
-  </div>
-
   <script src="../js/medicamento.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
-  <script src="../js/i18n.js"></script>
+  
 <script>
  
 </script>
