--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header-buttons">
       <button onclick="irHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al inicio input-with-ico
+        <i class="fas fa-arrow-left"></i> Volver al inicio 
       </button>
     </div>
   </header>
